# android-elf-guide

./: README.md
example/: CMakeLists.txt  example.cpp
